# UFOAI

./: .env.example  .gitignore  README.md  config.py  models.py  pyproject.toml
pipeline/: geocoder.py  image_processor.py  metadata_enricher.py  orchestrator.py  pdf_processor.py  video_processor.py
rag/: chain.py  graph_builder.py  investigator.py  openrouter_client.py  vectorstore.py
scraper/: aaro_scraper.py  scheduler.py  war_gov_scraper.py
ui/: app.py  cli.py  tui.py
