[project]
name = "ufoai"
version = "0.1.0"
description = "UFO/UAP data collection, analysis, and local RAG system"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.1",
    "langchain-community>=0.0.10",
    "langchain-text-splitters>=0.0.1",
    "chromadb>=0.4",
    "pymupdf>=1.24",
    "playwright>=1.40",
    "pytesseract>=0.3",
    "streamlit>=1.30",
    "ollama>=0.1",
    "openai>=1.0",
    "pillow>=10.0",
    "ffmpeg-python>=0.2",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "rich>=13.0",
    "httpx>=0.25",
    "beautifulsoup4>=4.12",
]

[project.scripts]
ufoai = "ui.cli:main"

[tool.setuptools]
packages = ["scraper", "pipeline", "rag", "ui"]
